--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,18 @@ services:
     image: docker.n8n.io/n8nio/n8n
     container_name: n8n
     ports:
-      - "5678:5678"
+      - "127.0.0.1:5678:5678"
     env_file:
       - .env
     volumes:
       - n8n_data_volume:/home/node/.n8n
+      - ./local-files:/files
     # depends_on:
     #   - postgres
     networks:
       - n8n_network
     restart: unless-stopped
+
   # postgres:
   #   image: postgres:13
   #   container_name: postgres_n8n
